Tweak to styling to avoid overflow on <pre>

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -95,7 +95,6 @@ code {
 }
 pre,
 pre[class*="language-"] {
-  padding: 1em;
   margin: .5em 0;
   line-height: 1.375; /* 22px /16 */
   -moz-tab-size: 2;
